# graphql-gateway

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
gateway/: supergraph-schema.graphql  supergraph.yaml
post/: post_service.py
src/app/: config.py  main.py
src/app/database/: __init__.py  config.py
src/app/utils/: db_utils.py  filters_utils.py
src/auth/: models.py  oauth.py  routers.py  schemas.py
